@@ -119,6 +119,7 @@
   "gui.act.modifier.tag.editor.intArray": "Liste d'entier",
   "gui.act.modifier.tag.editor.longArray": "Liste de long entier",
   "gui.act.modifier.inventory": "Editeur d'inventaire",
+  "gui.act.modifier.light": "Luminosité",
 
   "gui.act.modifier.string.registry.items": "Objets",
   "gui.act.modifier.string.registry.blocks": "Blocs",
