@@ -6,6 +6,12 @@
 > Minecraft version(s): 1.8.9->1.19.3
 
 -------------------------------------------------------
+--------------- ACT 2.7.2 -- (MC1.19.3) ---------------
+-------------------------------------------------------
+
+- update lightness of a light item
+
+-------------------------------------------------------
 --------------- ACT 2.7.1 -- (MC1.19.3) ---------------
 -------------------------------------------------------
 
